tests/snapshots/examples_fixtures/suggestions__global_scope.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/suggestions/global_scope.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/suggestions/global_scope.flx:8:1
  |
8 | print(totalCoun);
  | ^^^^^^^^^^^^^^^^^
  | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/suggestions/global_scope.flx:8:1
  |
8 | print(totalCoun);
  | ^^^^^^^^^^^^^^^^^
  | ----------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E004]: UNDEFINED VARIABLE

I can't find a value named `totalCoun`.

  --> examples/suggestions/global_scope.flx:8:7
  |
8 | print(totalCoun);
  |       ^^^^^^^^^

Hint:
  Define it first: let totalCoun = ...;


Help:
  Did you mean one of: `totalCount`, `totalAmount`?

Found 3 errors.
== stdout ==
<not executed>
